# log-sentinel

docs/superpowers/plans/: 2026-03-23-log-sentinel.md
docs/superpowers/specs/: 2026-03-23-log-sentinel-design.md
log-sentinel/: config.yaml  log-sentinel.service  pyproject.toml  requirements.txt
log-sentinel/log_sentinel/: __main__.py  config.py  health.py  sender.py  tailer.py  watcher.py
log-sentinel/log_sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
log-sentinel/log_sentinel/parsers/: __init__.py  base.py  clf_parser.py  fallback_parser.py  json_parser.py  syslog_parser.py
log-sentinel/tests/: test_config.py  test_integration.py  test_parsers.py  test_sender.py  test_tailer.py
